# sciqisHomodyneTomography

./: README.md  pyproject.toml  requirements.txt
HomoTomo/: generateState.ipynb  generated_state.qu  measurements.npz  measurements_metadata.txt  reconstruct.ipynb
references/: refs.txt
