[project]
name = "HomodyneTomography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.9.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "qutip>=5.0.4",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
